--- a/Education.html
+++ b/Education.html
@@ -24,7 +24,7 @@
 				
 					<ul class="navbar-nav ml-auto"> 
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="Index.html">Home</a>
+					<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="About.html">About me</a>
