--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
 							<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 			</head>
 			<!--Backgroud-->
-			<body style = "background: url(Image5.jpg);
+			<body style = "background: url(image5.jpg);
 						background-size: 80%">
 		
 			
